docker compose to muzix-app

--- a/track-service/src/main/resources/application.properties
+++ b/track-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-server-port=8080
-#spring.profiles.active=dev
 
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/track
-spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
+spring.application.name=TrackService
+server.port=8080
+eureka.client.service-url.defaultZone=http://localhost:8089/eureka/
